--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,10 @@ on: push
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
+    strategy:
+        fail-fast: false # https://github.com/cypress-io/github-action/issues/48
+        matrix:
+          containers: [1, 2] # Uses 2 parallel instances
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -14,3 +18,10 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
             browser: chrome
+            record: true
+            parallel: true # Runs test in parallel using settings above
+        env:
+            # pass the Cypress Cloud record key as an environment variable
+            CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+            # pass the project ID from the secrets through environment variable
+            CYPRESS_PROJECT_ID: ${{ secrets.PROJECT_ID }}
