try to move env

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,15 @@ name: cypress_learn_project
 
 on: push
 
+env:
+    # Set up the Cypress Cloud project ID and record key as environment variables
+    # If the Actions secret EXAMPLE_PROJECT_ID is not defined then
+    # the projectId is taken from cypress.json (v9) or cypress.config.js (v10 and later).
+    # If the Actions secret EXAMPLE_RECORDING_KEY is not defined then recording jobs are skipped.
+    CYPRESS_PROJECT_ID: ${{ secrets.EXAMPLE_PROJECT_ID }}
+    CYPRESS_RECORD_KEY: ${{ secrets.EXAMPLE_RECORDING_KEY }}
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
@@ -20,8 +29,4 @@ jobs:
             browser: chrome
             record: true
             parallel: true # Runs test in parallel using settings above
-        env:
-            # pass GitHub token to allow accurately detecting a build vs a re-run build
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            # pass the Cypress Cloud record key as an environment variable
-            CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+       
