--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ env:
     # the projectId is taken from cypress.json (v9) or cypress.config.js (v10 and later).
     # If the Actions secret EXAMPLE_RECORDING_KEY is not defined then recording jobs are skipped.
     CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
-    CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORDING_KEY }}
+    CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
