--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,7 @@ jobs:
         with:
             record: true
             parallel: true
+            group: 'Actions example'
             browser: chrome            
 
         env: 
