--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ env:
     # If the Actions secret EXAMPLE_RECORDING_KEY is not defined then recording jobs are skipped.
     CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
     CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    GH_ENTERPRISE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   cypress-run:
