--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   cypress-run:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     strategy:
         # when one test fails, DO NOT cancel the other
         # containers, because this will kill Cypress processes
@@ -22,14 +22,13 @@ jobs:
           containers: [1, 2, 3]
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
-        uses: cypress-io/github-action@v6.6.1
+        uses: cypress-io/github-action@v6
         with:
             browser: chrome            
-
         env: 
             # Get the short ref name of the branch that triggered the workflow run
             COMMIT_INFO_BRANCH: ${{ github.ref_name }}
