--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         # https://github.com/cypress-io/github-action/issues/48
         fail-fast: false
         matrix:
-          containers: [1, 2, 3, 4, 5]
+          containers: [1]
     steps:          
         # install a specific version of Node using
         # https://github.com/actions/setup-node
@@ -33,41 +33,21 @@ jobs:
       
       - name: Checkout
         uses: actions/checkout@v4
-      
-      # Restore the previous NPM modules and Cypress binary archives.
-      # Any updated archives will be saved automatically after the entire
-      # workflow successfully finishes.
-      # See https://github.com/actions/cache
-      # we use exact restore key to avoid NPM module snowballing
-      # https://glebbahmutov.com/blog/do-not-let-npm-cache-snowball/
-      - name: Cache central NPM modules
-        uses: actions/cache@v3
-        with:
-          path: |
-            C:\Users\runneradmin\AppData\npm-cache
-            C:\Users\runneradmin\AppData\Local\Cypress\Cache\13.6.3\Cypress
-          key: ${{ runner.os }}-node-${{ github.ref }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-${{ github.ref }}-${{ hashFiles('**/package-lock.json') }}
-
-
-      - name: install dependencies and verify Cypress
-        env:
-          # make sure every Cypress install prints minimal information
-          CI: 1
-        run: |
-          npm install --force
-          npx cypress cache path
-          npx cypress cache list
-          npx cypress verify
-          npx cypress info     
+           
 
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
-        uses: cypress-io/github-action@v6
+        uses: cypress-io/github-action@v6.6.1
         with:
-          browser: chrome            
+          browser: chrome
+      - run: |
+          npm ci
+          npx cypress cache prune
+          npx cypress cache list --size
+          npx cypress run  
+        
+                  
         env: 
             # Get the short ref name of the branch that triggered the workflow run
             COMMIT_INFO_BRANCH: ${{ github.ref_name }}
