--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,15 +37,11 @@ jobs:
 
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v6.6.1
-        with:
-          browser: chrome
       - run: |
           npm ci
           npx cypress cache prune
           npx cypress cache list --size
-          npx cypress run  
+          npx cypress run --browser chrome
         
                   
         env: 
