--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,13 +39,11 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6.6.1
         with:
-          install-command: npm ci 
+          install-command: npm.cmd ci 
           command: |
-            npx cypress cache prune
-            npx cypress cache list --size
-            npx cypress run --browser chrome
-        
-                  
+            npx.cmd cypress cache prune
+            npx.cmd cypress cache list --size
+            npx.cmd cypress run --browser chrome                 
         env: 
             # Get the short ref name of the branch that triggered the workflow run
             COMMIT_INFO_BRANCH: ${{ github.ref_name }}
