--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,37 @@
 name: cypress_learn_project
 
-on: [push, workflow_dispatch]
+on: workflow_dispatch
 
 env:
-    # Set up the Cypress Cloud project ID and record key as environment variables
-    # If the Actions secret EXAMPLE_PROJECT_ID is not defined then
-    # the projectId is taken from cypress.json (v9) or cypress.config.js (v10 and later).
-    # If the Actions secret EXAMPLE_RECORDING_KEY is not defined then recording jobs are skipped.
-    GH_ENTERPRISE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  # Set up the Cypress Cloud project ID and record key as environment variables
+  # If the Actions secret EXAMPLE_PROJECT_ID is not defined then
+  # the projectId is taken from cypress.json (v9) or cypress.config.js (v10 and later).
+  # If the Actions secret EXAMPLE_RECORDING_KEY is not defined then recording jobs are skipped.
+  GH_ENTERPRISE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
     strategy:
-        # when one test fails, DO NOT cancel the other
-        # containers, because this will kill Cypress processes
-        # leaving Cypress Cloud hanging ...
-        # https://github.com/cypress-io/github-action/issues/48
-        fail-fast: false
-        matrix:
-          containers: [1, 2, 3, 4, 5]
-    steps:          
+      # when one test fails, DO NOT cancel the other
+      # containers, because this will kill Cypress processes
+      # leaving Cypress Cloud hanging ...
+      # https://github.com/cypress-io/github-action/issues/48
+      fail-fast: false
+      matrix:
+        containers: [1, 2]
+    steps:
       - name: Checkout
-        uses: actions/checkout@v3         
+        uses: actions/checkout@v3
 
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          command: npm install cypress & cypress run
-          browser: chrome            
-        env: 
-            # Get the short ref name of the branch that triggered the workflow run
-            COMMIT_INFO_BRANCH: ${{ github.ref_name }}
-            SPLIT: ${{ strategy.job-total }}
-            SPLIT_INDEX: ${{ strategy.job-index }}
+          browser: chrome
+        env:
+          # Get the short ref name of the branch that triggered the workflow run
+          COMMIT_INFO_BRANCH: ${{ github.ref_name }}
+          SPLIT: ${{ strategy.job-total }}
+          SPLIT_INDEX: ${{ strategy.job-index }}
