--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: cypress_learn_project
 
-on: workflow_dispatch
+on: push
 
 env:
   # Set up the Cypress Cloud project ID and record key as environment variables
