--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,3 +34,12 @@ jobs:
           npx cypress cache list
           npx cypress cache prune
           npx cypress verify
+      - name: Cypress tests run with actions
+        uses: cypress-io/github-action@v6.6.1
+        with:
+          browser: chrome
+        env:
+          # Get the short ref name of the branch that triggered the workflow run
+          COMMIT_INFO_BRANCH: ${{ github.ref_name }}
+          SPLIT: ${{ strategy.job-total }}
+          SPLIT_INDEX: ${{ strategy.job-index }}
