--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "devDependencies": {
     "@mmisty/cypress-allure-adapter": "^0.16.2",
-    "allure-commandline": "^2.26.0",
+    "@shelex/cypress-allure-plugin": "^2.40.1",
+    "allure-commandline": "^2.27.0",
     "cypress": "^13.6.3",
-    "cypress-split": "^1.19.0"
+    "cypress-split": "^1.19.0",
+    "mocha-allure-reporter": "^1.4.0"
   }
 }
