--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,6 +65,16 @@ jobs:
         if: always()
         uses: peaceiris/actions-gh-pages@v3.9.3
         env:
-          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PERSONAL_TOKEN: ${{ env.GH_ENTERPRISE_TOKEN }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history
+
+      - name: Post the link to the report
+        if: always()
+        uses: Sibz/github-status-action@v1
+        with:
+          authToken: ${{ env.GH_ENTERPRISE_TOKEN }}
+          context: "Test report"
+          state: "success"
+          sha: ${{ github.event.pull_request.head.sha }}
+          target_url: simple-elf.github.io/github-allure-history/${{ github.run_number }}
