--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,10 +64,10 @@ jobs:
       - name: Deploy report to Github Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v3.9.3
-        env:
-          PERSONAL_TOKEN: ${{ env.GH_ENTERPRISE_TOKEN }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: allure-history
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: allure-history
+          publish_branch: gh-pages
 
       - name: Post the link to the report
         if: always()
