--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,10 +71,10 @@ jobs:
 
       - name: Post the link to the report
         if: always()
-        uses: Sibz/github-status-action@v1
+        uses: Sibz/github-status-action@v1.1.6
         with:
           authToken: ${{ env.GH_ENTERPRISE_TOKEN }}
           context: "Test report"
           state: "success"
-          sha: ${{ github.event.pull_request.head.sha }}
+          sha: ${{ github.event.pull_request.head.sha || github.sha}}
           target_url: simple-elf.github.io/github-allure-history/${{ github.run_number }}
