--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,12 +24,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.1.1
 
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: zulu
-          java-version: 17
-
       - name: Cypress tests run with actions
         uses: cypress-io/github-action@v6.6.1
         with:
@@ -40,16 +34,45 @@ jobs:
           SPLIT: ${{ strategy.job-total }}
           SPLIT_INDEX: ${{ strategy.job-index }}
 
-      - name: Generate report
+      - name: Log runner details
         run: |
-          npx allure generate
+          echo '=== Disk information ==='
+          df -H
 
-      - name: Post the link to the report
-        if: always()
-        uses: Sibz/github-status-action@v1.1.6
+      - name: Allure - Setup Java
+        uses: actions/setup-java@v3
         with:
-          authToken: ${{ env.GH_ENTERPRISE_TOKEN }}
-          context: "Test report"
-          state: "success"
-          sha: ${{ github.sha }}
-          target_url: https://karinaAv.github.io/cypress_learn_project/github-allure-history/${{ github.run_number }}
+          distribution: temurin
+          java-version: 21
+
+      - name: Allure - Setup Allure CLI
+        env:
+          ALLURE_VERSION: 2.25.0
+        run: |
+          wget -q "https://github.com/allure-framework/allure2/releases/download/$ALLURE_VERSION/allure-$ALLURE_VERSION.zip"
+          unzip -q "allure-2.25.0.zip"
+          echo "$PWD/allure-$ALLURE_VERSION/bin" >> $GITHUB_PATH
+
+      - name: Generate report
+        id: generate-report
+        env:
+          ALLURE_NO_ANALYTICS: 1
+          ALLURE_RESULTS_DIR: allure-results
+          ALLURE_REPORT_DIR: allure-report
+          ALLURE_REPORT_URL: allure-report/index.html
+        run: |
+          echo "Generating combined report"
+          npx allure generate -o $ALLURE_REPORT_DIR $ALLURE_RESULTS_DIR
+
+          echo "report_url=$ALLURE_REPORT_URL" >> $GITHUB_OUTPUT
+
+      - name: Generate summary for the workflow
+        run: |
+          echo "### Summary" >> $GITHUB_STEP_SUMMARY
+
+          echo "Report URL: ${{ steps.generate-report.outputs.report_url }}" >> $GITHUB_STEP_SUMMARY
+
+      - name: Free disk space - After report generation
+        if: always()
+        run: |
+          df -H
