--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,38 +46,10 @@ jobs:
           SPLIT: ${{ strategy.job-total }}
           SPLIT_INDEX: ${{ strategy.job-index }}
 
-      - name: Allure - Setup Java
-        if: always()
-        uses: actions/setup-java@v3
+      - name: Generate Report
+        uses: ./.github/workflows/generate_allure.yml
         with:
-          distribution: temurin
-          java-version: 21
-
-      - name: Load test report history
-        uses: actions/checkout@v3
-        if: always()
-        continue-on-error: true
-        with:
-          ref: gh-pages
-          path: gh-pages
-
-      - name: Test marketplace action
-        uses: simple-elf/allure-report-action@master
-        if: always()
-        with:
-          allure_results: allure-results
-          gh_pages: gh-pages
-          allure_report: allure-report
-          allure_history: allure-history
-          keep_reports: 10
-
-      - name: Publish test report
-        uses: peaceiris/actions-gh-pages@v3
-        if: always()
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: allure-history
+          job_index: ${{ strategy.job-index }}
 
       - name: Free disk space - After report generation
         if: always()
